# Claude2.0

./: .gitignore  CLAUDE.md  workspace.json
NEW PROJECT START HERE/: CLAUDE.md  (+1 more)
apps/odds-pipeline/: .gitignore  CLAUDE.md  TODO.md  pyproject.toml  start.bat
apps/odds-pipeline/odds_pipeline/: __init__.py  __main__.py  archive.py  cli.py  config.py
apps/odds-pipeline/odds_pipeline/identity/: __init__.py  matcher.py
apps/odds-pipeline/odds_pipeline/identity/aliases/: NBA.json  NFL.json  NHL.json
apps/odds-pipeline/odds_pipeline/odds_source/: __init__.py  client.py  ingest.py
apps/odds-pipeline/odds_pipeline/results_sources/: __init__.py  base.py  ingest.py  mlb.py  nba.py  ncaab.py  ncaaf.py  nfl.py  nhl.py
apps/odds-pipeline/odds_pipeline/store/: derive.py  migrate.py  schema.sql  seed.py
apps/odds-pipeline/tests/: test_archive.py  test_config.py  test_derive.py  test_identity.py  test_migrate.py  test_odds_client.py  test_odds_ingest.py  test_results_base.py  test_results_ingest.py  test_results_mlb.py  test_results_nba.py  test_results_ncaab.py  test_results_ncaaf.py  test_results_nfl.py  test_results_nhl.py  test_seed.py
apps/odds-pipeline/tests/fixtures/odds_api/: historical_event_odds_nba.json  historical_events_nba_20250115.json
apps/odds-pipeline/tests/fixtures/results/mlb/: linescore_data_example.json  schedule_example.json
apps/odds-pipeline/tests/fixtures/results/nba/: boxscore_0022400500.json
apps/odds-pipeline/tests/fixtures/results/ncaab/: scoreboard_example.json
apps/odds-pipeline/tests/fixtures/results/ncaaf/: games_2024_week16.json
(+623 files in other folders)
